src/objects/Marketing_Inventory_Item_Order__c.object
<CustomObject>
    <description>The Marketing Inventory Item Orders represent an order of each individual Marketing Inventory Item. Together, many Marketing Inventory Item Orders make up a Marketing Inventory Order.</description>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>The date of delivery</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Inventory_Item__c</fullName>
        <label>Marketing Inventory Item</label>
        <referenceTo>Marketing_Inventory_Item__c</referenceTo>
        <relationshipLabel>Marketing Inventory Item Orders</relationshipLabel>
        <relationshipName>Marketing_Inventory_Item_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Inventory_Order__c</fullName>
        <label>Marketing Inventory Order</label>
        <referenceTo>Marketing_Inventory_Order__c</referenceTo>
        <relationshipLabel>Marketing Inventory Item Orders</relationshipLabel>
        <relationshipName>Marketing_Inventory_Item_Orders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Price__c</fullName>
        <formula>Marketing_Inventory_Item__r.Unit_Price__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number of units ordered.</description>
        <inlineHelpText>The number of units ordered.</inlineHelpText>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The parent Marketing Inventory Order&apos;s status does not get set to complete until all of its child Marketing Inventory Item Orders are set to Delivered.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Inventory Item Order</label>
    <nameField>
        <label>Marketing Inventory Item Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Inventory Item Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>